# kinesis-client-rust

./: Cargo.toml
src/: main.rs
